# 2do_Examen_Robotica

./: README.md
test1/: README.md  VIDEO.docx
test1/dqn_ws/: trained_model.pkl
test1/dqn_ws/src/tb3_dqn/: package.xml  setup.cfg  setup.py
test1/dqn_ws/src/tb3_dqn/tb3_dqn/: dqn_agent.py  environment.py  state_processor.py  test_node.py  train_node.py
test1/dqn_wsfinal/dqn_ws/: trained_model.pkl
test1/dqn_wsfinal/dqn_ws/src/tb3_dqn/tb3_dqn/: dqn_agent.py  environment.py  generar_grafica.py  state_processor.py  test_node.py  train_node.py
test2/: README
test2/ej2/ros2_ws/src/gesture_control/: package.xml  setup.py
test2/ej2/ros2_ws/src/gesture_control/gesture_control/: gesture_node.py
test2/test_ej2/: test_ej2.ino
test_ej_extra/src/perception_lab/: package.xml  setup.cfg  setup.py
test_ej_extra/src/perception_lab/perception_lab/: mapa_calor.py
